2025-02-06: add new apis, migrations, handlers and queries
